.provarCaches/00D5f000005vwGkEAI/objects/rstk__poshipcontdtl__c.object
<CustomObject>
    <description>poshipcontdtl__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__poshipcontdtl_poshipcont__r.rstk__externalid__c + &apos;_&apos; +  TEXT( rstk__poshipcontdtl_seq__c )</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__poshipcontdtl_poshipcont__r.rstk__poshipcont_containerid__c + &apos; (&apos; +   rstk__poshipcontdtl_poline__r.rstk__poline_ordno__r.rstk__pohdr_ordno__c +
&apos;-&apos; +  TEXT(rstk__poshipcontdtl_poline__r.rstk__poline_lne__c) + &apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>rstk__poshipcontdtl_poshipcont__r.rstk__poshipcont_containerid__c + &apos; &apos; +  rstk__poshipcontdtl_poline__r.rstk__poline_ordno__r.rstk__pohdr_ordno__c + &apos; &apos; +  Text(rstk__poshipcontdtl_poline__r.rstk__poline_lne__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poshipcontdtl_icreceptacle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Receptacle Return</label>
        <referenceTo>rstk__icreceptacle__c</referenceTo>
        <relationshipName>poshipcontdtls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poshipcontdtl_maxf__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Maximum Shipping Temp (F)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poshipcontdtl_minf__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Minimum Shipping Temp (F)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poshipcontdtl_mtrpartno__c</fullName>
        <formula>rstk__poshipcontdtl_supmtr__r.rstk__supmtr_supitem__r.Name</formula>
        <inlineHelpText>Part Number of material being transferred.</inlineHelpText>
        <label>Material Transfer Part No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poshipcontdtl_mtrqnty__c</fullName>
        <formula>rstk__poshipcontdtl_supmtr__r.rstk__supmtr_qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Quantity in inventory uom of item being transferred.</inlineHelpText>
        <label>Material Transfer Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poshipcontdtl_poline__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Purchase Order Line</label>
        <referenceTo>rstk__poline__c</referenceTo>
        <relationshipName>polineposhipcontdtls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poshipcontdtl_poshipcont__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Shipment Container ID</label>
        <referenceTo>rstk__poshipcont__c</referenceTo>
        <relationshipName>poshipcontdtls</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__poshipcontdtl_qty__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Quantity</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poshipcontdtl_receptqty__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Receptacle Return Qty</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poshipcontdtl_seq__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sequence Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poshipcontdtl_supmtr__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>System-assigned number identifying this specific material transfer request.</inlineHelpText>
        <label>Material Transfer Request</label>
        <referenceTo>rstk__supmtr__c</referenceTo>
        <relationshipName>supmtrPoshipcontdtls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poshipcontdtl_supreq__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Supplier Requisition</label>
        <referenceTo>rstk__supreq__c</referenceTo>
        <relationshipName>supreqPoshipcontdtl</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Inbound Shipment Container Contents SupR</label>
    <listViews>
        <fullName>rstk__RS_Inbound_Shipment_Container_Contents</fullName>
        <columns>NAME</columns>
        <columns>rstk__poshipcontdtl_supmtr__c</columns>
        <columns>rstk__poshipcontdtl_poline__c</columns>
        <columns>rstk__poshipcontdtl_qty__c</columns>
        <columns>rstk__poshipcontdtl_poshipcont__c</columns>
        <columns>rstk__poshipcontdtl_supreq__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Inbound Shipment Container Contents</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inbound Shipment Container Contents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__Container_ID_cannot_change</fullName>
        <active>true</active>
        <description>Container ID cannot be changed.</description>
        <errorConditionFormula>ischanged(rstk__poshipcontdtl_poshipcont__c)</errorConditionFormula>
        <errorMessage>Container ID cannot be changed.</errorMessage>
    </validationRules>
</CustomObject>